update tex files

--- a/0_slides_intro.tex
+++ b/0_slides_intro.tex
@@ -41,7 +41,7 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Историческое развитие моделей}
+\begin{frame}{Историческое развитие моделей: классические модели}
 \footnotesize
 \begin{itemize}
 \item \textbf{Модель Башелье} (1900). Случайное блуждание цен активов \\ 
@@ -53,6 +53,9 @@
 \item \textbf{Стохастическое исчисление} (1944). Интеграл Ито \\
 \begin{scriptsize}{\textit{Itô K. Stochastic Integral (1944)}}\end{scriptsize}
 
+\item \textbf{Портфельная теория} (1952). Efficient Frontier, CAPM \\
+\begin{scriptsize}{\textit{Markowitz H.M. Portfolio Selection (1952)}}\end{scriptsize}
+
 \item \textbf{Модель Блэка-Шоулза} (1973). Прайсинг через репликацию \\
 \begin{scriptsize}{\textit{Black F., Scholes M. The Pricing of Options (1973)}}\end{scriptsize}
 
@@ -61,11 +64,9 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Историческое развитие моделей}
+\begin{frame}{Историческое развитие моделей: поправки к классическим моделям}
 \footnotesize
 \begin{itemize}
-
-
 \item \textbf{Модели стохастической волатильности} (1993). Отказ от постоянной волатильности, тяжелые хвосты. \\
 Модель Хестона \scriptsize{\textit{Heston S.L. A Closed-Form Solution (1993)}}
 \\Формула Дюпира 
@@ -74,18 +75,24 @@
 \item \textbf{Кредитный риск} (2009-2010). xVA. Реакция на кризиз 2008 года \\
 \begin{scriptsize}{\textit{BIS Basel III Framework (2010); Pykhtin M., Zhu S. (2007)}}\end{scriptsize}
 
-\item \textbf{Микроструктура рынка} (1985-2018). Модель Кайла. Deep Hedging \\
-\begin{scriptsize}{\textit{Kyle A.S. Continuous Auctions (1985); Bühler H. et al. (2019)}}\end{scriptsize}
+\item \textbf{Микроструктура рынка} (1985-2018). Модель Кайла. 
+\begin{scriptsize}{\textit{Kyle A.S. Continuous Auctions (1985); Almgren-Chriss (2001)}}\end{scriptsize}
+\end{itemize}
+\end{frame}
 
+
+\begin{frame}{Историческое развитие моделей: современные модели}
+\footnotesize
+\begin{itemize}
 \item \textbf{Децентрализованные финансы} (2008-). Блокчейн, смарт-контракты, Automated Market Makers\\
 \begin{scriptsize}{\textit{Nakamoto S. Bitcoin Whitepaper (2008)}}\end{scriptsize} \\
 \begin{scriptsize}{\textit{Buterin V. Ethereum Whitepaper (2014)}}\end{scriptsize} \\
 \begin{scriptsize}{\textit{Adams H. Uniswap v3 Core (2021)}}\end{scriptsize}
 
-\item \textbf{Машинное обучение} (2010-) Алгоритмический трейдинг, прогнозирование 
-\begin{scriptsize}{\textit{Lo A.W. Adaptive Markets (2017)}}\end{scriptsize}
-\\ Генеративные модели
-\begin{scriptsize} \textit{Hans Buehler, Generating Financial Markets With Signatures (2021)} \end{scriptsize}
+\item \textbf{Машинное обучение} (2010-) Генеративные модели
+\begin{scriptsize} \textit{Bühler H., Generating Financial Markets With Signatures (2021)} \end{scriptsize}
+Deep Hedging \\
+\begin{scriptsize} \textit{Bühler H. et al. (2019)} \end{scriptsize}
 \end{itemize}
 \end{frame}
 
