--- a/1_homework.tex
+++ b/1_homework.tex
@@ -18,19 +18,6 @@ $$
 $$
 
 \begin{problem}
-    Пусть $\xi, \eta$ -- i.i.d. Найти
-    $\E [\xi | \xi + \eta]$. 
-\end{problem}
-
-\begin{problem}
-(Условное мат. ожидание). Пусть $(X, Y) \sim N(\mu, \Sigma)$ -- двумерный гауссовский вектор. Найти $\E\left[ X | Y\right]$. Убедиться, что 
-\begin{itemize}
-    \item $\E\left[\E\left[ X | Y\right]\right] = \E X$
-    \item Если $\mathrm{cov}(X, Y)=0$, то $\E\left[ X | Y\right] = \E X$.
-\end{itemize}
-\end{problem}
-
-\begin{problem}
     Пусть $\xi_t \sim Be(1/2)$ -- i.i.d., $X_t = \sum_{s=1}^t \xi_s$ -- случайное блуждание. Убедитесь, что процесс $M_t = X_t^2 - t$ мартингал.
 \end{problem}
 
@@ -47,7 +34,7 @@ $$
     Пусть $X_t$ -- симметричное случайное блуждание, $(\mathcal{F}_t)_{t\geq0}$ -- фильтрация, порождённая $X_t$. Пусть:
     $$
         \tau = \inf_{t \geq 0} \{ X_t = a \lor X_t =-b\}
-    $$где $a, b > 0$ -- целые числа.
+    $$где $a, b > 0$ -- целые числа. Т.е. $\tau$ -- первый момент времени, когда процесс $X_t$ принимает значение $a$ или $-b$.
 
     \begin{itemize}
         \item Убедитесь, что $\tau$ -- момент остановки
@@ -69,36 +56,10 @@ $$
 \end{problem}
 
 \begin{problem}
-    Пусть $\xi_t$ -- квадратично-интегрируемый мартингал, докажите, что:
+    Пусть $X_t$ -- квадратично-интегрируемый мартингал, докажите, что:
     $$
-        \mathrm{cov} (\xi_p - \xi_q, \xi_t - \xi_s) = 0
+        \mathrm{cov} (X_p - X_q, X_t - X_s) = 0
     $$ при $s \leq t \leq q \leq p$
-\end{problem}
-
-\begin{problem}
-    Пусть $W_t$ -- броуновское движение относительно непрерывной фильтрации $(\mathcal{F}_t)_{t\geq0}$, т.е.:
-    \begin{itemize}
-        \item $W_0 = 0$
-        \item Траектории $W_t$ непрерывны почти наверное
-        \item $W_t - W_s \sim N(0, t-s)$ и $W_t - W_s \perp \mathcal{F}_s$
-    \end{itemize}
-
-    Докажите, что:
-    \begin{itemize}
-        \item $W_t$ -- мартингал относительно фильтрации $(\mathcal{F}_t)_{t\geq0}$
-        \item $W_t^2 -t$ -- мартингал относительно фильтрации $(\mathcal{F}_t)_{t\geq0}$
-        \item Пусть $\lambda \in \R$. При каких $\alpha$ процесс 
-        $Y_t = e^{\alpha t + \lambda W_t}$ является мартингалом?
-    \end{itemize}
-\end{problem}
-
-\begin{problem}
-    Пусть $\xi \sim N(0, 1)$, $p_{\xi}(x) = \frac{1}{\sqrt{2\pi}}e^{-0.5x^2}$. 
-    \begin{itemize}
-        \item Найти меру (плотность) относительно которой $\xi \sim N(a, 1)$.
-        \item Найти производную Радона-Никодима $f$.
-        \item Убедиться, что $\Ef = 1, \; \E [f\cdot \xi] = a$.
-    \end{itemize}
 \end{problem}
 
 \end{document}
